--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -1,3 +1,33 @@
 body {
   background-color: white;
 }
+
+.imageGrid {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  height: 1560px;
+  width: 1260px;
+  margin-left: 193px;
+}
+
+.imageContainer {
+  width: 519px;
+  height: 519px;
+  background-color: red;
+  margin: 10px;
+}
+.image {
+  float: left;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  outline: none;
+  cursor: pointer;
+  box-sizing: inherit;
+  color: transparent;
+  border-style: none;
+  left: 0;
+  top: 0;
+  overflow: none;
+}
