--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -12,12 +12,62 @@ body {
 }
 
 .imageContainer {
-  max-width: 519px;
-  max-height: 519px;
+  width: 519px;
+  height: 519px;
   background-color: red;
   margin: 10px;
 }
 .image {
+  float: left;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  outline: none;
+  cursor: pointer;
+  box-sizing: inherit;
+  color: transparent;
+  border-style: none;
+  left: 0;
+  top: 0;
+  overflow: none;
+}
+
+.carousel {
+  width: 100vw;
+  height: 100vh;
+  background-color: white;
+  position: fixed;
+  -webkit-animation-name: slideIn;
+  -webkit-animation-duration: .4s;
+  animation-name: slideIn;
+  animation-duration: .4s;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+@-webkit-keyframes slideIn {
+  from {bottom: -1000px; opacity: 0}
+  to {bottom: 0; opacity: 1}
+}
+@keyframes slideIn {
+  from {bottom: -1000px; opacity: 0}
+  to {bottom: 0; opacity: 1}
+}
+
+.bodyCarousel {
+  overflow: hidden;
+  margin: 0 auto;
+}
+
+#carouselImageContainer {
+  width: 519px;
+  height: 519px;
+  background-color: red;
+  margin: 10px;
+}
+
+#currentImage{
   float: left;
   width: 100%;
   height: 100%;
