--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -81,3 +81,20 @@ body {
   top: 0;
   overflow: none;
 }
+#exitCarousel{
+  position: absolute;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  margin-left: 1400px;
+  margin-top: 20px;
+  text-align: center;
+  font-size: 1.8em;
+  vertical-align: middle;
+  font-family: sans-serif;
+  z-index: 1;
+}
+#exitCarousel:hover{
+  background-color: rgba(1, 1, 1, .04);
+  cursor: pointer;
+}
