--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -6,17 +6,41 @@ body {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  height: 1560px;
-  width: 1260px;
-  margin-left: 193px;
+  width: calc(100vw / 1.65);
+  margin-left: 30px;
 }
 
 .imageContainer {
-  width: 519px;
-  height: 519px;
+  width: calc(100vw / 3.5);
+  height: calc(100vw / 3.5);
   background-color: red;
   margin: 10px;
 }
+
+@media only screen and (max-width: 1200px) {
+  .imageContainer {
+    width: calc(100vw / 4.2);
+    height: calc(100vw / 4.2);
+    background-color: red;
+    margin: 10px;
+  }
+  .imageGrid {
+    width: calc(100vw / 1.9);
+  }
+}
+
+@media only screen and (max-width: 900px) {
+  .imageContainer {
+    width: calc(100vw / 5);
+    height: calc(100vw / 5);
+    background-color: red;
+    margin: 10px;
+  }
+  .imageGrid {
+    width: calc(100vw / 2);
+  }
+}
+
 .image {
   float: left;
   width: 100%;
@@ -42,6 +66,7 @@ body {
   animation-name: slideIn;
   animation-duration: .4s;
   display: flex;
+  flex-direction: row-reverse;
   align-items: center;
   justify-content: center;
 }
@@ -60,11 +85,19 @@ body {
   margin: 0 auto;
 }
 
+#carouselContainer{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: blue;
+}
+
 #carouselImageContainer {
-  width: 519px;
-  height: 519px;
   background-color: red;
-  margin: 10px;
+  height: calc(100vh / 1.35);
+  width: calc(100vh / 1.35);
+  max-width: 100vw;
+  max-height: 100vw;
 }
 
 #currentImage{
@@ -82,16 +115,11 @@ body {
   overflow: none;
 }
 #exitCarousel{
-  position: absolute;
+  align-self: flex-start;
   width: 40px;
   height: 40px;
   border-radius: 50%;
-  margin-left: 1400px;
-  margin-top: 20px;
   text-align: center;
-  font-size: 1.8em;
-  vertical-align: middle;
-  font-family: sans-serif;
   z-index: 1;
 }
 #exitCarousel:hover{
