--- a/client/src/styles/styles.css
+++ b/client/src/styles/styles.css
@@ -2,18 +2,85 @@ body {
   background-color: white;
 }
 
+.header {
+  display: flex;
+}
+
+.menuContainer {
+  margin-left: 30px;
+  margin-top: 20px;
+}
+.svg-icon {
+  fill: currentColor;
+}
+.menu {
+  position: fixed;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  display:flex;
+  align-items: center;
+  justify-content: center;
+}
+.menu:hover {
+  background-color: rgba(1, 1, 1, .05);
+  cursor: pointer;
+}
+#logo {
+  margin-right: 20px;
+  margin-left: 20px;
+  cursor: pointer;
+}
+
+.navBarContainer {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  width: 100vw;
+  height: 100px;
+  margin-top: -10px;
+  margin-bottom: 50px;
+  margin-left: 50px;
+}
+
+.navLinks {
+  padding: 10px 15px;
+  font-family: 'Noto Sans', sans-serif;;
+  /* font-size: .875rem;
+  font-weight: 700; */
+  color: #111;
+  cursor: pointer;
+}
+
+.navLinks:hover {
+  text-decoration:underline;
+}
+
+#searchBar {
+  background-color: rgba(1, 1, 1, .05);
+  width: 500px;
+  height: 50px;
+  border-radius: 50em;
+  margin-left: 20px;
+  cursor: text;
+}
+
+#searchBar:hover {
+  background-color: rgba(1, 1, 1, .15);
+}
+
 .imageGrid {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   width: calc(100vw / 1.65);
-  margin-left: 30px;
+  margin-left: 90px;
 }
 
 .imageContainer {
   width: calc(100vw / 3.5);
   height: calc(100vw / 3.5);
-  background-color: red;
+  /* background-color: red; */
   margin: 10px;
 }
 
@@ -21,11 +88,22 @@ body {
   .imageContainer {
     width: calc(100vw / 4.2);
     height: calc(100vw / 4.2);
-    background-color: red;
+    /* background-color: red; */
     margin: 10px;
   }
   .imageGrid {
     width: calc(100vw / 1.9);
+    margin-left: 30px;
+  }
+
+  .navLinks {
+    display: none;
+  }
+  .menuContainer {
+    display: none;
+  }
+  .navBarContainer {
+    margin-left: 20px;
   }
 }
 
@@ -33,7 +111,7 @@ body {
   .imageContainer {
     width: calc(100vw / 5);
     height: calc(100vw / 5);
-    background-color: red;
+    /* background-color: red; */
     margin: 10px;
   }
   .imageGrid {
