--- a/client/src/styles/styles.css
+++ b/client/src/styles/styles.css
@@ -36,7 +36,7 @@ body {
   display: flex;
   flex-direction: row;
   align-items: center;
-  width: 100vw;
+  width: calc(100vw - 40px);
   height: 100px;
   margin-top: -10px;
   margin-bottom: 50px;
@@ -158,6 +158,10 @@ body {
     margin-left:20px;
     width: 680px;
   }
+  #logo {
+    width: 90px;
+    height: 36px;
+  }
 }
 
 @media only screen and (max-width: 900px) {
@@ -169,6 +173,24 @@ body {
   }
   .imageGrid {
     width: calc(100vw / 2);
+  }
+  #searchBar {
+    height: 45px;
+  }
+  #logo {
+    width: 75px;
+    height: 30px;
+  }
+}
+
+@media only screen and (max-width: 700px) {
+  .navBarContainer {
+    flex-wrap: wrap;
+    height: 150px;
+  }
+  #searchBar {
+    order: 4;
+    margin-top: -45px;
   }
 }
 
