--- a/client/src/styles/styles.css
+++ b/client/src/styles/styles.css
@@ -13,7 +13,7 @@ body {
 .svg-icon {
   fill: currentColor;
 }
-.menu {
+.menuFolder {
   position: fixed;
   width: 40px;
   height: 40px;
@@ -22,7 +22,7 @@ body {
   align-items: center;
   justify-content: center;
 }
-.menu:hover {
+.menuFolder:hover {
   background-color: rgba(1, 1, 1, .05);
   cursor: pointer;
 }
